@@ -1,103 +1,103 @@
-# This file was generated by Rcpp::compileAttributes
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 zrnormMT <- function(n) {
-    .Call('RcppZiggurat_zrnormMT', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormMT`, n)
 }
 
 zsetseedMT <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseedMT', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseedMT`, s))
 }
 
 zrnormLZLLV <- function(n) {
-    .Call('RcppZiggurat_zrnormLZLLV', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormLZLLV`, n)
 }
 
 zsetseedLZLLV <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseedLZLLV', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseedLZLLV`, s))
 }
 
 zrnormV1 <- function(n) {
-    .Call('RcppZiggurat_zrnormV1', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormV1`, n)
 }
 
 zrnormVecV1 <- function(x) {
-    .Call('RcppZiggurat_zrnormVecV1', PACKAGE = 'RcppZiggurat', x)
+    .Call(`_RcppZiggurat_zrnormVecV1`, x)
 }
 
 zrnormStlV1 <- function(n) {
-    .Call('RcppZiggurat_zrnormStlV1', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormStlV1`, n)
 }
 
 zsetseedV1 <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseedV1', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseedV1`, s))
 }
 
 zgetseedV1 <- function() {
-    .Call('RcppZiggurat_zgetseedV1', PACKAGE = 'RcppZiggurat')
+    .Call(`_RcppZiggurat_zgetseedV1`)
 }
 
 zrnorm <- function(n) {
-    .Call('RcppZiggurat_zrnorm', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnorm`, n)
 }
 
 zrnormVec <- function(x) {
-    .Call('RcppZiggurat_zrnormVec', PACKAGE = 'RcppZiggurat', x)
+    .Call(`_RcppZiggurat_zrnormVec`, x)
 }
 
 zrnormStl <- function(n) {
-    .Call('RcppZiggurat_zrnormStl', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormStl`, n)
 }
 
 zsetseed <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseed', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseed`, s))
 }
 
 zgetseed <- function() {
-    .Call('RcppZiggurat_zgetseed', PACKAGE = 'RcppZiggurat')
+    .Call(`_RcppZiggurat_zgetseed`)
 }
 
 zsetseedGSL <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseedGSL', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseedGSL`, s))
 }
 
 zrnormGSL <- function(n) {
-    .Call('RcppZiggurat_zrnormGSL', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormGSL`, n)
 }
 
 zrnormV1b <- function(n) {
-    .Call('RcppZiggurat_zrnormV1b', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormV1b`, n)
 }
 
 zrnormQL <- function(n) {
-    .Call('RcppZiggurat_zrnormQL', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormQL`, n)
 }
 
 zsetseedQL <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseedQL', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseedQL`, s))
 }
 
 zrnormGl <- function(n) {
-    .Call('RcppZiggurat_zrnormGl', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormGl`, n)
 }
 
 zsetseedGl <- function(s) {
-    invisible(.Call('RcppZiggurat_zsetseedGl', PACKAGE = 'RcppZiggurat', s))
+    invisible(.Call(`_RcppZiggurat_zsetseedGl`, s))
 }
 
 zrnormR <- function(n) {
-    .Call('RcppZiggurat_zrnormR', PACKAGE = 'RcppZiggurat', n)
+    .Call(`_RcppZiggurat_zrnormR`, n)
 }
 
 ziggbin <- function(nbins, ndraws, generator = "Ziggurat", seed = 42L, edge = 7L, res = 40L) {
-    .Call('RcppZiggurat_ziggbin', PACKAGE = 'RcppZiggurat', nbins, ndraws, generator, seed, edge, res)
+    .Call(`_RcppZiggurat_ziggbin`, nbins, ndraws, generator, seed, edge, res)
 }
 
 ziggsum <- function(nbins, ndraws, generator = "Ziggurat", seed = 42L) {
-    .Call('RcppZiggurat_ziggsum', PACKAGE = 'RcppZiggurat', nbins, ndraws, generator, seed)
+    .Call(`_RcppZiggurat_ziggsum`, nbins, ndraws, generator, seed)
 }
 
 ziggtest <- function(nbins, ndraws, generator = "Ziggurat", seed = 42L) {
-    .Call('RcppZiggurat_ziggtest', PACKAGE = 'RcppZiggurat', nbins, ndraws, generator, seed)
+    .Call(`_RcppZiggurat_ziggtest`, nbins, ndraws, generator, seed)
 }
 
